--- a/gtk/res/history.gtk2.ui
+++ b/gtk/res/history.gtk2.ui
@@ -1,218 +1,242 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<glade-interface>
-  <!-- interface-requires gtk+ 2.6 -->
-  <!-- interface-naming-policy toplevel-contextual -->
-  <widget class="GtkWindow" id="wndHotlist">
-    <property name="title" translatable="yes">Bookmarks - NetSurf</property>
-    <property name="window_position">mouse</property>
+<interface>
+  <!-- interface-requires gtk+ 3.0 -->
+  <object class="GtkWindow" id="wndHistory">
+    <property name="can_focus">False</property>
+    <property name="title" translatable="yes">NetSurf Global History</property>
+    <property name="window_position">center</property>
     <property name="default_width">600</property>
     <property name="default_height">500</property>
+    <property name="type_hint">utility</property>
     <child>
-      <widget class="GtkVBox" id="vbox1">
+      <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
-        <property name="border_width">2</property>
-        <property name="spacing">2</property>
+        <property name="can_focus">False</property>
         <child>
-          <widget class="GtkMenuBar" id="menubar1">
+          <object class="GtkMenuBar" id="menubar1">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <child>
-              <widget class="GtkMenuItem" id="menuitem1">
+              <object class="GtkMenuItem" id="menuitem1">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="label" translatable="yes">_File</property>
                 <property name="use_underline">True</property>
-                <child>
-                  <widget class="GtkMenu" id="menu1">
+                <child type="submenu">
+                  <object class="GtkMenu" id="menu1">
                     <property name="visible">True</property>
+                    <property name="can_focus">False</property>
                     <child>
-                      <widget class="GtkMenuItem" id="export">
+                      <object class="GtkMenuItem" id="export">
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="label" translatable="yes">_Export</property>
                         <property name="use_underline">True</property>
                         <accelerator key="E" signal="activate" modifiers="GDK_CONTROL_MASK"/>
-                      </widget>
+                      </object>
                     </child>
-                    <child>
-                      <widget class="GtkMenuItem" id="new_folder">
-                        <property name="visible">True</property>
-                        <property name="label" translatable="yes">New _folder</property>
-                        <property name="use_underline">True</property>
-                        <accelerator key="M" signal="activate" modifiers="GDK_CONTROL_MASK"/>
-                      </widget>
-                    </child>
-                    <child>
-                      <widget class="GtkMenuItem" id="new_entry">
-                        <property name="visible">True</property>
-                        <property name="label" translatable="yes">New _entry</property>
-                        <property name="use_underline">True</property>
-                        <accelerator key="N" signal="activate" modifiers="GDK_CONTROL_MASK"/>
-                      </widget>
-                    </child>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
             </child>
             <child>
-              <widget class="GtkMenuItem" id="menuitem2">
+              <object class="GtkMenuItem" id="menuitem2">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="label" translatable="yes">_Edit</property>
                 <property name="use_underline">True</property>
-                <child>
-                  <widget class="GtkMenu" id="menu2">
+                <child type="submenu">
+                  <object class="GtkMenu" id="menu2">
                     <property name="visible">True</property>
+                    <property name="can_focus">False</property>
                     <child>
-                      <widget class="GtkMenuItem" id="edit_selected">
+                      <object class="GtkMenuItem" id="delete_selected">
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">_Edit</property>
-                        <property name="use_underline">True</property>
-                      </widget>
-                    </child>
-                    <child>
-                      <widget class="GtkMenuItem" id="delete_selected">
-                        <property name="visible">True</property>
-                        <property name="tooltip" translatable="yes">Deletes selected nodes</property>
+                        <property name="can_focus">False</property>
                         <property name="label" translatable="yes">_Delete</property>
                         <property name="use_underline">True</property>
                         <accelerator key="Delete" signal="activate" modifiers="GDK_CONTROL_MASK"/>
-                      </widget>
+                      </object>
                     </child>
                     <child>
-                      <widget class="GtkMenuItem" id="select_all">
+                      <object class="GtkMenuItem" id="delete_all">
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">D_elete all</property>
+                        <property name="use_underline">True</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkMenuItem" id="select_all">
+                        <property name="use_action_appearance">False</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="label" translatable="yes">_Select all</property>
                         <property name="use_underline">True</property>
                         <accelerator key="A" signal="activate" modifiers="GDK_MOD1_MASK"/>
-                      </widget>
+                      </object>
                     </child>
                     <child>
-                      <widget class="GtkMenuItem" id="clear_selection">
+                      <object class="GtkMenuItem" id="clear_selection">
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="label" translatable="yes">_Clear selection</property>
                         <property name="use_underline">True</property>
                         <accelerator key="U" signal="activate" modifiers="GDK_MOD1_MASK"/>
-                      </widget>
+                      </object>
                     </child>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
             </child>
             <child>
-              <widget class="GtkMenuItem" id="menuitem3">
+              <object class="GtkMenuItem" id="menuitem3">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="label" translatable="yes">_View</property>
                 <property name="use_underline">True</property>
-                <child>
-                  <widget class="GtkMenu" id="menu4">
+                <child type="submenu">
+                  <object class="GtkMenu" id="menu4">
                     <property name="visible">True</property>
+                    <property name="can_focus">False</property>
                     <child>
-                      <widget class="GtkMenuItem" id="expand">
+                      <object class="GtkMenuItem" id="expand">
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="label" translatable="yes">_Expand</property>
                         <property name="use_underline">True</property>
-                        <child>
-                          <widget class="GtkMenu" id="menu5">
+                        <child type="submenu">
+                          <object class="GtkMenu" id="menu5">
                             <property name="visible">True</property>
+                            <property name="can_focus">False</property>
                             <child>
-                              <widget class="GtkMenuItem" id="expand_all">
+                              <object class="GtkMenuItem" id="expand_all">
+                                <property name="use_action_appearance">False</property>
                                 <property name="visible">True</property>
+                                <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">_All</property>
                                 <property name="use_underline">True</property>
-                              </widget>
+                              </object>
                             </child>
                             <child>
-                              <widget class="GtkMenuItem" id="expand_directories">
+                              <object class="GtkMenuItem" id="expand_directories">
+                                <property name="use_action_appearance">False</property>
                                 <property name="visible">True</property>
+                                <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">_Directories</property>
                                 <property name="use_underline">True</property>
-                              </widget>
+                              </object>
                             </child>
                             <child>
-                              <widget class="GtkMenuItem" id="expand_addresses">
+                              <object class="GtkMenuItem" id="expand_addresses">
+                                <property name="use_action_appearance">False</property>
                                 <property name="visible">True</property>
+                                <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">Add_resses</property>
                                 <property name="use_underline">True</property>
-                              </widget>
+                              </object>
                             </child>
-                          </widget>
+                          </object>
                         </child>
-                      </widget>
+                      </object>
                     </child>
                     <child>
-                      <widget class="GtkMenuItem" id="collapse">
+                      <object class="GtkMenuItem" id="collapse">
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="label" translatable="yes">_Collapse</property>
                         <property name="use_underline">True</property>
-                        <child>
-                          <widget class="GtkMenu" id="menu6">
+                        <child type="submenu">
+                          <object class="GtkMenu" id="menu6">
                             <property name="visible">True</property>
+                            <property name="can_focus">False</property>
                             <child>
-                              <widget class="GtkMenuItem" id="collapse_all">
+                              <object class="GtkMenuItem" id="collapse_all">
+                                <property name="use_action_appearance">False</property>
                                 <property name="visible">True</property>
+                                <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">_All</property>
                                 <property name="use_underline">True</property>
-                              </widget>
+                              </object>
                             </child>
                             <child>
-                              <widget class="GtkMenuItem" id="collapse_directories">
+                              <object class="GtkMenuItem" id="collapse_directories">
+                                <property name="use_action_appearance">False</property>
                                 <property name="visible">True</property>
+                                <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">_Directories</property>
                                 <property name="use_underline">True</property>
-                              </widget>
+                              </object>
                             </child>
                             <child>
-                              <widget class="GtkMenuItem" id="collapse_addresses">
+                              <object class="GtkMenuItem" id="collapse_addresses">
+                                <property name="use_action_appearance">False</property>
                                 <property name="visible">True</property>
+                                <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">Add_resses</property>
                                 <property name="use_underline">True</property>
-                              </widget>
+                              </object>
                             </child>
-                          </widget>
+                          </object>
                         </child>
-                      </widget>
+                      </object>
                     </child>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
             </child>
             <child>
-              <widget class="GtkMenuItem" id="launch">
+              <object class="GtkMenuItem" id="launch">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
-                <property name="tooltip" translatable="yes">Launches the selected addresses</property>
+                <property name="can_focus">False</property>
                 <property name="label" translatable="yes">_Launch</property>
                 <property name="use_underline">True</property>
-              </widget>
+              </object>
             </child>
-          </widget>
+          </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <widget class="GtkScrolledWindow" id="hotlistScrolled">
+          <object class="GtkScrolledWindow" id="globalHistoryScrolled">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">automatic</property>
-            <property name="vscrollbar_policy">automatic</property>
             <child>
-              <widget class="GtkViewport" id="hotlistViewport">
+              <object class="GtkViewport" id="globalHistoryViewport">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="resize_mode">queue</property>
                 <child>
-                  <widget class="GtkDrawingArea" id="hotlistDrawingArea">
+                  <object class="GtkDrawingArea" id="globalHistoryDrawingArea">
                     <property name="visible">True</property>
                     <property name="app_paintable">True</property>
                     <property name="can_focus">True</property>
                     <property name="events">GDK_EXPOSURE_MASK | GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK | GDK_LEAVE_NOTIFY_MASK | GDK_STRUCTURE_MASK</property>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
             </child>
-          </widget>
+          </object>
           <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
-      </widget>
+      </object>
     </child>
-  </widget>
-</glade-interface>
+  </object>
+</interface>
