--- a/gtk/res/netsurf.gtk2.ui
+++ b/gtk/res/netsurf.gtk2.ui
@@ -1,27 +1,47 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
+<?xml version="1.0"?>
 <!--Generated with glade3 3.4.5 on Wed Apr  7 17:10:28 2010 -->
-<glade-interface>
-  <widget class="GtkWindow" id="wndBrowser">
+<interface>
+  <object class="GtkAdjustment" id="adjustment1">
+    <property name="upper">100</property>
+    <property name="lower">0</property>
+    <property name="page_increment">10</property>
+    <property name="step_increment">26</property>
+    <property name="page_size">10</property>
+    <property name="value">0.5357142857142857</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment2">
+    <property name="upper">100</property>
+    <property name="lower">0</property>
+    <property name="page_increment">10</property>
+    <property name="step_increment">26</property>
+    <property name="page_size">10</property>
+    <property name="value">0</property>
+  </object>
+  <object class="GtkUIManager" id="uimanager1">
+    <ui>
+      <menubar name="menubar"/>
+    </ui>
+  </object>
+  <object class="GtkWindow" id="wndBrowser">
     <property name="title" translatable="yes">NetSurf</property>
     <property name="window_position">GTK_WIN_POS_CENTER</property>
     <child>
-      <widget class="GtkVBox" id="vbox14">
+      <object class="GtkVBox" id="vbox14">
         <property name="visible">True</property>
         <child>
-          <widget class="GtkMenuBar" id="menubar">
+          <object class="GtkMenuBar" constructor="uimanager1" id="menubar">
             <property name="visible">True</property>
-          </widget>
+          </object>
           <packing>
             <property name="expand">False</property>
             <property name="fill">False</property>
           </packing>
         </child>
         <child>
-          <widget class="GtkToolbar" id="toolbar">
+          <object class="GtkToolbar" id="toolbar">
             <property name="visible">True</property>
             <property name="toolbar_style">GTK_TOOLBAR_BOTH_HORIZ</property>
-          </widget>
+          </object>
           <packing>
             <property name="expand">False</property>
             <property name="fill">False</property>
@@ -29,112 +49,110 @@
           </packing>
         </child>
         <child>
-          <widget class="GtkToolbar" id="searchbar">
+          <object class="GtkToolbar" id="searchbar">
             <property name="toolbar_style">GTK_TOOLBAR_BOTH</property>
             <child>
-              <widget class="GtkToolButton" id="closeSearchButton">
+              <object class="GtkToolButton" id="closeSearchButton">
                 <property name="visible">True</property>
                 <property name="stock_id">gtk-close</property>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkToolItem" id="searchLabelItem">
+              <object class="GtkToolItem" id="searchLabelItem">
                 <property name="visible">True</property>
                 <child>
-                  <widget class="GtkLabel" id="searchlabel">
+                  <object class="GtkLabel" id="searchlabel">
                     <property name="visible">True</property>
                     <property name="xpad">4</property>
                     <property name="label" translatable="yes">Match</property>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="homogeneous">False</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkToolItem" id="toolSearch">
+              <object class="GtkToolItem" id="toolSearch">
                 <property name="visible">True</property>
                 <child>
-                  <widget class="GtkEntry" id="searchEntry">
+                  <object class="GtkEntry" id="searchEntry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="homogeneous">False</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkToolButton" id="searchBackButton">
+              <object class="GtkToolButton" id="searchBackButton">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">Search _Back</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-go-back</property>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkToolButton" id="searchForwardButton">
+              <object class="GtkToolButton" id="searchForwardButton">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">Search _Forward</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-go-forward</property>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkToolItem" id="checkAllSearchItem">
+              <object class="GtkToolItem" id="checkAllSearchItem">
                 <property name="visible">True</property>
                 <child>
-                  <widget class="GtkCheckButton" id="checkAllSearch">
+                  <object class="GtkCheckButton" id="checkAllSearch">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="tooltip" translatable="yes">show all matches</property>
+                    <property name="tooltip-text" translatable="yes">show all matches</property>
                     <property name="label" translatable="yes">All      </property>
                     <property name="use_underline">True</property>
-                    <property name="response_id">0</property>
                     <property name="draw_indicator">True</property>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="homogeneous">False</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkToolItem" id="caseSensItem">
+              <object class="GtkToolItem" id="caseSensItem">
                 <property name="visible">True</property>
                 <child>
-                  <widget class="GtkCheckButton" id="caseSensButton">
+                  <object class="GtkCheckButton" id="caseSensButton">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="tooltip" translatable="yes">Match case when searching</property>
+                    <property name="tooltip-text" translatable="yes">Match case when searching</property>
                     <property name="label" translatable="yes">Case</property>
                     <property name="relief">GTK_RELIEF_NONE</property>
                     <property name="use_underline">True</property>
-                    <property name="response_id">0</property>
                     <property name="draw_indicator">True</property>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="homogeneous">False</property>
               </packing>
             </child>
-          </widget>
+          </object>
           <packing>
             <property name="expand">False</property>
             <property name="fill">False</property>
@@ -142,7 +160,7 @@
           </packing>
         </child>
         <child>
-          <widget class="GtkNotebook" id="notebook">
+          <object class="GtkNotebook" id="notebook">
             <property name="visible">True</property>
             <property name="show_tabs">False</property>
             <property name="show_border">False</property>
@@ -150,138 +168,45 @@
             <child>
               <placeholder/>
             </child>
-            <child>
-              <placeholder/>
-              <packing>
-                <property name="type">tab</property>
-              </packing>
-            </child>
-            <child>
+            <child type="tab">
               <placeholder/>
             </child>
             <child>
               <placeholder/>
-              <packing>
-                <property name="type">tab</property>
-              </packing>
             </child>
-            <child>
+            <child type="tab">
               <placeholder/>
             </child>
             <child>
               <placeholder/>
-              <packing>
-                <property name="type">tab</property>
-              </packing>
             </child>
-            <child>
+            <child type="tab">
               <placeholder/>
             </child>
             <child>
               <placeholder/>
-              <packing>
-                <property name="type">tab</property>
-              </packing>
             </child>
-            <child>
+            <child type="tab">
               <placeholder/>
             </child>
             <child>
               <placeholder/>
-              <packing>
-                <property name="type">tab</property>
-              </packing>
             </child>
-            <child>
+            <child type="tab">
               <placeholder/>
             </child>
             <child>
               <placeholder/>
-              <packing>
-                <property name="type">tab</property>
-              </packing>
             </child>
-          </widget>
+            <child type="tab">
+              <placeholder/>
+            </child>
+          </object>
           <packing>
             <property name="position">3</property>
           </packing>
         </child>
-      </widget>
+      </object>
     </child>
-  </widget>
-  <widget class="GtkWindow" id="tabContentsWindow">
-    <child>
-      <widget class="GtkTable" id="tabContents">
-        <property name="visible">True</property>
-        <property name="n_rows">2</property>
-        <property name="n_columns">2</property>
-        <child>
-          <widget class="GtkLayout" id="layout">
-            <property name="visible">True</property>
-            <property name="app_paintable">True</property>
-          </widget>
-        </child>
-        <child>
-          <widget class="GtkStatusbar" id="resizer">
-            <property name="height_request">1</property>
-            <property name="visible">True</property>
-            <property name="spacing">2</property>
-          </widget>
-          <packing>
-            <property name="left_attach">1</property>
-            <property name="right_attach">2</property>
-            <property name="top_attach">1</property>
-            <property name="bottom_attach">2</property>
-            <property name="x_options">GTK_FILL</property>
-            <property name="y_options">GTK_FILL</property>
-          </packing>
-        </child>
-        <child>
-          <widget class="GtkHPaned" id="hpaned1">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <child>
-              <widget class="GtkLabel" id="status_bar">
-                <property name="width_request">1</property>
-                <property name="visible">True</property>
-                <property name="xalign">0</property>
-                <property name="xpad">4</property>
-                <property name="label" translatable="yes">Status</property>
-              </widget>
-              <packing>
-                <property name="resize">False</property>
-                <property name="shrink">False</property>
-              </packing>
-            </child>
-            <child>
-              <widget class="GtkHScrollbar" id="hscrollbar">
-                <property name="visible">True</property>
-                <property name="adjustment">0.5357142857142857 0 100 26 10 10</property>
-              </widget>
-              <packing>
-                <property name="resize">True</property>
-                <property name="shrink">True</property>
-              </packing>
-            </child>
-          </widget>
-          <packing>
-            <property name="top_attach">1</property>
-            <property name="bottom_attach">2</property>
-            <property name="y_options">GTK_FILL</property>
-          </packing>
-        </child>
-        <child>
-          <widget class="GtkVScrollbar" id="vscrollbar">
-            <property name="visible">True</property>
-            <property name="adjustment">0 0 100 26 10 10</property>
-          </widget>
-          <packing>
-            <property name="left_attach">1</property>
-            <property name="right_attach">2</property>
-            <property name="x_options"></property>
-          </packing>
-        </child>
-      </widget>
-    </child>
-  </widget>
-</glade-interface>
+  </object>
+</interface>
