--- a/gtk/res/source.gtk2.ui
+++ b/gtk/res/source.gtk2.ui
@@ -1,183 +1,185 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Mon Apr 20 21:28:45 2009 -->
-<glade-interface>
-  <widget class="GtkWindow" id="wndSource">
+<?xml version="1.0"?>
+<interface>
+  <!-- interface-requires gtk+ 2.12 -->
+  <!-- interface-naming-policy toplevel-contextual -->
+  <object class="GtkWindow" id="wndSource">
     <child>
-      <widget class="GtkVBox" id="vbox1">
+      <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <child>
-          <widget class="GtkMenuBar" id="menubar1">
+          <object class="GtkMenuBar" id="menubar1">
             <property name="visible">True</property>
             <child>
-              <widget class="GtkMenuItem" id="menuitem1">
+              <object class="GtkMenuItem" id="menuitem1">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">_File</property>
                 <property name="use_underline">True</property>
-                <child>
-                  <widget class="GtkMenu" id="menu1">
+                <child type="submenu">
+                  <object class="GtkMenu" id="menu1">
                     <property name="visible">True</property>
                     <child>
-                      <widget class="GtkImageMenuItem" id="source_save_as">
+                      <object class="GtkImageMenuItem" id="source_save_as">
+                        <property name="label">gtk-save-as</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-save-as</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <accelerator key="S" modifiers="GDK_CONTROL_MASK" signal="activate"/>
-                      </widget>
+                        <accelerator key="S" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                      </object>
                     </child>
                     <child>
-                      <widget class="GtkImageMenuItem" id="source_print">
+                      <object class="GtkImageMenuItem" id="source_print">
+                        <property name="label">gtk-print</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-print</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <accelerator key="P" modifiers="GDK_CONTROL_MASK" signal="activate"/>
-                      </widget>
+                        <accelerator key="P" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                      </object>
                     </child>
                     <child>
-                      <widget class="GtkSeparatorMenuItem" id="separatormenuitem1">
+                      <object class="GtkSeparatorMenuItem" id="separatormenuitem1">
                         <property name="visible">True</property>
-                      </widget>
+                      </object>
                     </child>
                     <child>
-                      <widget class="GtkImageMenuItem" id="source_close">
+                      <object class="GtkImageMenuItem" id="source_close">
+                        <property name="label">gtk-close</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-close</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                      </widget>
+                      </object>
                     </child>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
             </child>
             <child>
-              <widget class="GtkMenuItem" id="menuitem2">
+              <object class="GtkMenuItem" id="menuitem2">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">_Edit</property>
                 <property name="use_underline">True</property>
-                <child>
-                  <widget class="GtkMenu" id="menu2">
+                <child type="submenu">
+                  <object class="GtkMenu" id="menu2">
                     <property name="visible">True</property>
                     <child>
-                      <widget class="GtkImageMenuItem" id="source_select_all">
+                      <object class="GtkImageMenuItem" id="source_select_all">
+                        <property name="label">gtk-select-all</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-select-all</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <accelerator key="A" modifiers="GDK_CONTROL_MASK" signal="activate"/>
-                      </widget>
+                        <accelerator key="A" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                      </object>
                     </child>
                     <child>
-                      <widget class="GtkImageMenuItem" id="source_cut">
+                      <object class="GtkImageMenuItem" id="source_cut">
+                        <property name="label">gtk-cut</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-cut</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                      </widget>
+                      </object>
                     </child>
                     <child>
-                      <widget class="GtkImageMenuItem" id="source_copy">
+                      <object class="GtkImageMenuItem" id="source_copy">
+                        <property name="label">gtk-copy</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-copy</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                      </widget>
+                      </object>
                     </child>
                     <child>
-                      <widget class="GtkImageMenuItem" id="source_paste">
+                      <object class="GtkImageMenuItem" id="source_paste">
+                        <property name="label">gtk-paste</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-paste</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                      </widget>
+                      </object>
                     </child>
                     <child>
-                      <widget class="GtkImageMenuItem" id="source_delete">
+                      <object class="GtkImageMenuItem" id="source_delete">
+                        <property name="label">gtk-delete</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-delete</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <accelerator key="Delete" modifiers="" signal="activate"/>
-                      </widget>
+                        <accelerator key="Delete" signal="activate"/>
+                      </object>
                     </child>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
             </child>
             <child>
-              <widget class="GtkMenuItem" id="menuitem3">
+              <object class="GtkMenuItem" id="menuitem3">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">_View</property>
                 <property name="use_underline">True</property>
-                <child>
-                  <widget class="GtkMenu" id="menu4">
+                <child type="submenu">
+                  <object class="GtkMenu" id="menu4">
                     <property name="visible">True</property>
                     <child>
-                      <widget class="GtkImageMenuItem" id="source_zoom_in">
+                      <object class="GtkImageMenuItem" id="source_zoom_in">
+                        <property name="label">gtk-zoom-in</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-zoom-in</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <accelerator key="plus" modifiers="GDK_CONTROL_MASK" signal="activate"/>
-                      </widget>
+                        <accelerator key="plus" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                      </object>
                     </child>
                     <child>
-                      <widget class="GtkImageMenuItem" id="source_zoom_out">
+                      <object class="GtkImageMenuItem" id="source_zoom_out">
+                        <property name="label">gtk-zoom-out</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-zoom-out</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <accelerator key="minus" modifiers="GDK_CONTROL_MASK" signal="activate"/>
-                      </widget>
+                        <accelerator key="minus" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                      </object>
                     </child>
                     <child>
-                      <widget class="GtkImageMenuItem" id="source_zoom_normal">
+                      <object class="GtkImageMenuItem" id="source_zoom_normal">
+                        <property name="label">gtk-zoom-100</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-zoom-100</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <accelerator key="0" modifiers="GDK_CONTROL_MASK" signal="activate"/>
-                      </widget>
+                        <accelerator key="0" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                      </object>
                     </child>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
             </child>
             <child>
-              <widget class="GtkMenuItem" id="menuitem4">
+              <object class="GtkMenuItem" id="menuitem4">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">_Help</property>
                 <property name="use_underline">True</property>
-                <child>
-                  <widget class="GtkMenu" id="menu3">
+                <child type="submenu">
+                  <object class="GtkMenu" id="menu3">
                     <property name="visible">True</property>
                     <child>
-                      <widget class="GtkImageMenuItem" id="source_about">
+                      <object class="GtkImageMenuItem" id="source_about">
+                        <property name="label">gtk-about</property>
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-about</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                      </widget>
+                      </object>
                     </child>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
             </child>
-          </widget>
+          </object>
           <packing>
             <property name="expand">False</property>
+            <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <widget class="GtkScrolledWindow" id="sourcescrolled">
+          <object class="GtkScrolledWindow" id="sourcescrolled">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-            <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+            <property name="hscrollbar_policy">automatic</property>
+            <property name="vscrollbar_policy">automatic</property>
             <child>
-              <widget class="GtkTextView" id="source_view">
+              <object class="GtkTextView" id="source_view">
                 <property name="width_request">600</property>
                 <property name="height_request">400</property>
                 <property name="visible">True</property>
@@ -185,18 +187,18 @@
                 <property name="pixels_above_lines">1</property>
                 <property name="pixels_below_lines">1</property>
                 <property name="editable">False</property>
-                <property name="wrap_mode">GTK_WRAP_WORD</property>
+                <property name="wrap_mode">word</property>
                 <property name="left_margin">3</property>
                 <property name="right_margin">3</property>
                 <property name="accepts_tab">False</property>
-              </widget>
+              </object>
             </child>
-          </widget>
+          </object>
           <packing>
             <property name="position">1</property>
           </packing>
         </child>
-      </widget>
+      </object>
     </child>
-  </widget>
-</glade-interface>
+  </object>
+</interface>
