--- a/gtk/res/ssl.gtk2.ui
+++ b/gtk/res/ssl.gtk2.ui
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
+<?xml version="1.0"?>
 <!--*- mode: xml -*-->
-<glade-interface>
-  <widget class="GtkDialog" id="wndSSLProblem">
+<interface>
+  <object class="GtkDialog" id="wndSSLProblem">
     <property name="border_width">1</property>
     <property name="title" translatable="yes">SSL certificate problem</property>
     <property name="modal">True</property>
@@ -10,195 +9,194 @@
     <property name="default_height">250</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <child internal-child="vbox">
-      <widget class="GtkVBox" id="dialog-vbox3">
+      <object class="GtkVBox" id="dialog-vbox3">
         <property name="visible">True</property>
         <child>
-          <widget class="GtkHBox" id="hbox15">
+          <object class="GtkHBox" id="hbox15">
             <property name="visible">True</property>
             <child>
-              <widget class="GtkImage" id="image6">
+              <object class="GtkImage" id="image6">
                 <property name="visible">True</property>
                 <property name="yalign">0</property>
                 <property name="icon_size">6</property>
                 <property name="icon_name">gtk-dialog-warning</property>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkVBox" id="vbox13">
+              <object class="GtkVBox" id="vbox13">
                 <property name="visible">True</property>
                 <child>
-                  <widget class="GtkLabel" id="label62">
+                  <object class="GtkLabel" id="label62">
                     <property name="visible">True</property>
                     <property name="label" translatable="yes">NetSurf failed to verify the authenticity of an SSL certificate.  Please verify the details presented below.</property>
                     <property name="justify">GTK_JUSTIFY_CENTER</property>
                     <property name="wrap">True</property>
-                  </widget>
+                  </object>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkFrame" id="frame13">
+                  <object class="GtkFrame" id="frame13">
                     <property name="visible">True</property>
                     <property name="border_width">5</property>
                     <property name="label_xalign">0</property>
                     <child>
-                      <widget class="GtkAlignment" id="alignment17">
+                      <object class="GtkAlignment" id="alignment17">
                         <property name="visible">True</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <widget class="GtkScrolledWindow" id="SSLScrolled">
+                          <object class="GtkScrolledWindow" id="SSLScrolled">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="shadow_type">GTK_SHADOW_IN</property>
                             <child>
-                              <widget class="GtkViewport" id="SSLViewport">
+                              <object class="GtkViewport" id="SSLViewport">
                                 <property name="visible">True</property>
                                 <property name="resize_mode">GTK_RESIZE_QUEUE</property>
                                 <child>
-                                  <widget class="GtkDrawingArea" id="SSLDrawingArea">
+                                  <object class="GtkDrawingArea" id="SSLDrawingArea">
                                     <property name="visible">True</property>
                                     <property name="app_paintable">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="events">GDK_EXPOSURE_MASK | GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK | GDK_LEAVE_NOTIFY_MASK | GDK_STRUCTURE_MASK</property>
-                                  </widget>
+                                  </object>
                                 </child>
-                              </widget>
+                              </object>
                             </child>
-                          </widget>
+                          </object>
                         </child>
-                      </widget>
+                      </object>
                     </child>
-                    <child>
-                      <widget class="GtkLabel" id="label63">
+                    <child type="label">
+                      <object class="GtkLabel" id="label63">
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">&lt;b&gt;Certificate chain&lt;/b&gt;</property>
                         <property name="use_markup">True</property>
-                      </widget>
-                      <packing>
-                        <property name="type">label_item</property>
-                      </packing>
+                      </object>
                     </child>
-                  </widget>
+                  </object>
                   <packing>
                     <property name="position">1</property>
                   </packing>
                 </child>
-              </widget>
+              </object>
               <packing>
                 <property name="position">1</property>
               </packing>
             </child>
-          </widget>
+          </object>
           <packing>
             <property name="position">2</property>
           </packing>
         </child>
         <child internal-child="action_area">
-          <widget class="GtkHButtonBox" id="dialog-action_area3">
+          <object class="GtkHButtonBox" id="dialog-action_area3">
             <property name="visible">True</property>
             <property name="layout_style">GTK_BUTTONBOX_END</property>
             <child>
-              <widget class="GtkButton" id="sslreject">
+              <object class="GtkButton" id="sslreject">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
-                <property name="response_id">-6</property>
                 <child>
-                  <widget class="GtkAlignment" id="alignment16">
+                  <object class="GtkAlignment" id="alignment16">
                     <property name="visible">True</property>
                     <property name="xscale">0</property>
                     <property name="yscale">0</property>
                     <child>
-                      <widget class="GtkHBox" id="hbox14">
+                      <object class="GtkHBox" id="hbox14">
                         <property name="visible">True</property>
                         <property name="spacing">2</property>
                         <child>
-                          <widget class="GtkImage" id="image5">
+                          <object class="GtkImage" id="image5">
                             <property name="visible">True</property>
                             <property name="stock">gtk-cancel</property>
-                          </widget>
+                          </object>
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
                           </packing>
                         </child>
                         <child>
-                          <widget class="GtkLabel" id="label61">
+                          <object class="GtkLabel" id="label61">
                             <property name="visible">True</property>
                             <property name="label" translatable="yes">Reject</property>
                             <property name="use_underline">True</property>
-                          </widget>
+                          </object>
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
                             <property name="position">1</property>
                           </packing>
                         </child>
-                      </widget>
+                      </object>
                     </child>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
             </child>
             <child>
-              <widget class="GtkButton" id="sslaccept">
+              <object class="GtkButton" id="sslaccept">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
-                <property name="response_id">-5</property>
                 <child>
-                  <widget class="GtkAlignment" id="alignment15">
+                  <object class="GtkAlignment" id="alignment15">
                     <property name="visible">True</property>
                     <property name="xscale">0</property>
                     <property name="yscale">0</property>
                     <child>
-                      <widget class="GtkHBox" id="hbox13">
+                      <object class="GtkHBox" id="hbox13">
                         <property name="visible">True</property>
                         <property name="spacing">2</property>
                         <child>
-                          <widget class="GtkImage" id="image4">
+                          <object class="GtkImage" id="image4">
                             <property name="visible">True</property>
                             <property name="stock">gtk-apply</property>
-                          </widget>
+                          </object>
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
                           </packing>
                         </child>
                         <child>
-                          <widget class="GtkLabel" id="label60">
+                          <object class="GtkLabel" id="label60">
                             <property name="visible">True</property>
                             <property name="label" translatable="yes">Accept</property>
                             <property name="use_underline">True</property>
-                          </widget>
+                          </object>
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
                             <property name="position">1</property>
                           </packing>
                         </child>
-                      </widget>
+                      </object>
                     </child>
-                  </widget>
+                  </object>
                 </child>
-              </widget>
+              </object>
               <packing>
                 <property name="position">1</property>
               </packing>
             </child>
-          </widget>
+          </object>
           <packing>
             <property name="expand">False</property>
             <property name="pack_type">GTK_PACK_END</property>
           </packing>
         </child>
-      </widget>
+      </object>
     </child>
-  </widget>
-</glade-interface>
+    <action-widgets>
+      <action-widget response="-6">sslreject</action-widget>
+      <action-widget response="-5">sslaccept</action-widget>
+    </action-widgets>
+  </object>
+</interface>
